clusters/sno/applications/quay/quay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quay
  namespace: quay
spec:
  selector:
    app: quay
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
