clusters/sno/applications/quay/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quay
  namespace: quay
spec:
  host: quay.apps.majora.home.lab
  to:
    kind: Service
    name: quay
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
